fix popup z-index issue

--- a/FISE/public/src/main.scss
+++ b/FISE/public/src/main.scss
@@ -291,7 +291,7 @@ td[data-title="Organisation email"] span{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    z-index: 1;
+    z-index: 92;
     display: none;
     &.visible {
         display: flex;
